# travel-recommendation

./: .env.example  .gitignore  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  temp.py
accounts/: serializers.py  urls.py  views.py
tests/: conftest.py  test_accounts.py  test_travel.py
travel/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
travel/management/commands/: load_districts_data.py
travel/migrations/: 0001_initial.py
travel_recommendation/: asgi.py  settings.py  urls.py  wsgi.py
