[project]
name = "travel-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3", 
    "pytest>=8.3.5,<8.4.0",
    "ruff>=0.11.4,<0.12.0",
    "requests>=2.32.3,<2.33.0",
    "python-dotenv>=1.1.0,<1.2.0",
    "djangorestframework>=3.16.0,<3.17.0",
    "djangorestframework-simplejwt>=5.5.0,<5.6.0"
]

[tool.uv]
managed = false
